--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,10 +1,31 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
+body {
+  background-color: #f7f8fa;
+  font-family: 'Poppins', sans-serif;
+  height: 100vh;
+  color: #46444c;
+  position: relative;
+}
+
+body:before {
+  content: '';
+  background: #5a45ff;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 6px;
+  position: absolute;
+}
+
 * {
   margin: 0;
   padding: 0;
 }
 
-html,
-body {
-  height: 100%;
-  width: 100%;
+h1 {
+  @apply text-3xl font-bold mb-3 mt-6;
 }
