--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> AdonisJS - A fully featured web framework for Node.js </title>
-
-  @vite(['resources/css/app.css', 'resources/js/app.js'])
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AdonisJS - A fully featured web framework for Node.js</title>
+  @vite(['resources/js/app.js'])
 </head>
 <body>
-  <h1> It Works! </h1>
+   <main>
+ <header>
+         <nav>
+           <ul>
+             <li>
+               <a href={{ route('home') }}>Accueil</a>
+             </li>
+             <li>
+               <a href={{ route('movies.show', { slug: 'my-awesome-movie' }) }}>My Awesome Movie</a>
+             </li>
+             <li>
+                           <a href={{ route('movies.show', { slug: 'another-awesome-movie' }) }}>Another Awesome
+                           Movie</a>
+                         </li>
+           </ul>
+         </nav>
+       </header>
+ <div class="max-w-3xl mx-auto mt-6">
+
+     <div>
+       <h1> It Works! </h1>
+
+
+       <ul>
+        @each(movie in movies)
+          <li>
+            <a href={{ route('movies.show', { slug: movie.slug }) }}>{{ movie.title }}</a>
+          </li>
+        @endeach
+       </ul>
+     </div>
+</div>
+</main>
 </body>
 </html>
