--- a/resources/views/pages/movies/show.edge
+++ b/resources/views/pages/movies/show.edge
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AdonisJS - A fully featured web framework for Node.js</title>
+  <title>{{ movie.title }}</title>
   @vite(['resources/js/app.js'])
 </head>
 <body>
@@ -25,8 +25,8 @@
 
   <main>
     <div class="max-w-3xl mx-auto mt-6">
-      <h1>{{ md.frontmatter.title }}</h1>
-      {{{ movie }}}
+      <h1>{{ movie.title }}</h1>
+      {{{ movie.abstract }}}
     </div>
   </main>
 </body>
