--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -1,44 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AdonisJS - A fully featured web framework for Node.js</title>
-  @vite(['resources/js/app.js'])
-</head>
-<body>
-   <main>
- <header>
-         <nav>
-           <ul>
-             <li>
-               <a href={{ route('home') }}>Accueil</a>
-             </li>
-             <li>
-               <a href={{ route('movies.show', { slug: 'my-awesome-movie' }) }}>My Awesome Movie</a>
-             </li>
-             <li>
-                           <a href={{ route('movies.show', { slug: 'another-awesome-movie' }) }}>Another Awesome
-                           Movie</a>
-                         </li>
-           </ul>
-         </nav>
-       </header>
- <div class="max-w-3xl mx-auto mt-6">
+@layout({ title: 'Mon projet Adonis' })
 
-     <div>
-       <h1> It Works! </h1>
+  @slot('meta')
+    <meta name="description" content="Our First Adonis page" />
+  @endslot
 
+   <div class="max-w-[75%] mx-auto mt-6">
+       <div class="w-full">
+         <h1> It Works! </h1>
 
-       <ul>
-        @each(movie in movies)
-          <li>
-            <a href={{ route('movies.show', { slug: movie.slug }) }}>{{ movie.title }}</a>
-          </li>
-        @endeach
-       </ul>
-     </div>
-</div>
-</main>
-</body>
-</html>
+         <div class="w-full grid grid-cols-3 gap-3">
+          @each(movie in movies)
+            @!movie.card({ movie, class: 'w-full' })
+{{--            @!component('components/movie/card', { movie, class: 'w-full' } )--}}
+          @end
+         </div>
+       </div>
+  </div>
+  <div class="fixed bottom-0 right-3 flex gap-3">
+    @button({ href: '#', class: "rounded-b-none" })
+      Flush Redis DB
+    @end
+  </div>
+@end
