--- a/resources/views/pages/movies/show.edge
+++ b/resources/views/pages/movies/show.edge
@@ -1,33 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ movie.title }}</title>
-  @vite(['resources/js/app.js'])
-</head>
-<body>
- <header>
-        <nav>
-          <ul>
-            <li>
-              <a href={{ route('home') }}>Accueil</a>
-            </li>
-            <li>
-              <a href={{ route('movies.show', { slug: 'my-awesome-movie' }) }}>My Awesome Movie</a>
-            </li>
-            <li>
-              <a href={{ route('movies.show', { slug: 'another-awesome-movie' }) }}>Another Awesome Movie</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
+@layout({ title: movie.title })
 
-  <main>
+  @slot('meta')
+    <meta name="description" content="{{movie.summary}}" />
+  @endslot
+
     <div class="max-w-3xl mx-auto mt-6">
       <h1>{{ movie.title }}</h1>
-      {{{ movie.abstract }}}
+      @if (movie.abstract)
+        <div class="m-8 bg-slate-100 rounded-xl p-8">
+          {{{ movie.abstract }}}
+        </div>
+       @else
+        No abstracts
+      @endif
     </div>
-  </main>
-</body>
-</html>
+@end
