--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -4,6 +4,9 @@
       <li>
         <a class="text-white text-xl" href="{{ route('home') }}">Accueil</a>
       </li>
+      <li>
+        <a class="text-white text-xl" href="{{ route('directors.index') }}">Directors</a>
+      </li>
     </ul>
   </nav>
 </header>
