--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -5,11 +5,21 @@
   @endslot
 
    <div class="max-w-[75%] mx-auto mt-6">
+      <div class="w-full mb-[40px]">
+            <h2 class="text-[24px] font-bold mb-[15px]"> Coming Soon </h2>
+
+            <div class="w-full grid grid-cols-3 gap-3">
+             @each(movie in comingSoon)
+               @!movie.card({ movie, class: 'w-full' })
+   {{--            @!component('components/movie/card', { movie, class: 'w-full' } )--}}
+             @end
+            </div>
+          </div>
        <div class="w-full">
-         <h1> It Works! </h1>
+         <h2 class="text-[24px] font-bold mb-[15px]"> Recently Released </h2>
 
          <div class="w-full grid grid-cols-3 gap-3">
-          @each(movie in movies)
+          @each(movie in recentlyReleased)
             @!movie.card({ movie, class: 'w-full' })
 {{--            @!component('components/movie/card', { movie, class: 'w-full' } )--}}
           @end
