--- a/resources/views/components/movie/card.edge
+++ b/resources/views/components/movie/card.edge
@@ -5,11 +5,34 @@
         <img src="{{ movie.posterUrl }}" class="w-full h-auto object-center
         object-fill" alt="Lorem picsum" />
     </div>
-    <div class="p-7">
-        <h2 class="mb-2 text-lg font-bold leading-none tracking-tight">{{ movie.title }}</h2>
-        <p class="mb-5 text-slate-500">{{ truncate(movie.summary, 150, { completeWord: true }) }}</p>
-        @button({ href: route('movies.show', { slug: movie.slug }) })
-          View Movie
+    <div class="p-4">
+        <h3 class="text-lg font-bold leading-none tracking-tight">{{ movie.title }}</h3>
+        
+        @if (showWritterDirector)
+
+        <dl class="text-xs py-4">
+            <div class="flex">
+                <dt class="w-16">Writer : </dt>
+                <dd>
+                    <a href="{{ route('writers.show', { id: movie.writer.id })}}">{{ movie.writer.fullName }}</a>
+                </dd>
+            </div>
+            <div class="flex">
+                <dt class="w-16">Director : </dt>
+                <dd>
+                    <a href="{{ route('directors.show', { id: movie.director.id })}}">{{ movie.director.fullName }}</a>
+                </dd>
+            </div>
+        </dl>
+
+        @else 
+            <p class="text-slate-400 text-xs py-4">
+                {{ movie.summary}}
+            </p>
+        @endif
+
+         @button({ href: route('movies.show', {slug: movie.slug}) })
+            View movie
         @end
     </div>
 </div>
