--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -7,6 +7,9 @@
       <li>
         <a class="text-white text-xl" href="{{ route('directors.index') }}">Directors</a>
       </li>
+      <li>
+        <a class="text-white text-xl" href="{{ route('writers.index') }}">Writers</a>
+      </li>
     </ul>
   </nav>
 </header>
